--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+
 notifications:
   email: false
 
@@ -9,6 +10,10 @@ jobs:
       python: 3.6
     - name: " Python 3.7 Linux "
       python: 3.7
+    - name: " Python 3.8 Linux "
+      python: 3.8
+    - name: " Python 3.9 Linux "
+      python: 3.9
     # macOSx MACHINE #
     - name: " Python 3.6.5 macOSx 10.13"
       os: osx
