--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         os : [ubuntu-latest, macos-latest]
-        python-version: ["3.6", "3.7", "3.8", "3.9"]
+        python-version: ["3.6"]
 
     steps:
     - uses: actions/checkout@v2
@@ -35,6 +35,8 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
+        # pytest needs these too
+        if [ -f optional-requirements.txt ]; then pip install -r optional-requirements.txt; fi
 
     # Cache the pip requirmenets for other tests. If requirements cached use them to speed up the build.
     # Ref: https://github.com/actions/cache/blob/main/examples.md#python---pip 
