--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,10 +33,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
+        if [ -f requirements.txt ]; then python -m pip install -r requirements.txt; fi
+        if [ -f tests/requirements.txt ]; then python -m pip install -r tests/requirements.txt; fi
         # pytest needs these too
-        if [ -f optional-requirements.txt ]; then pip install -r optional-requirements.txt; fi
+        if [ -f optional-requirements.txt ]; then python -m pip install -r optional-requirements.txt; fi
 
     # Cache the pip requirmenets for other tests. If requirements cached use them to speed up the build.
     # Ref: https://github.com/actions/cache/blob/main/examples.md#python---pip 
@@ -69,9 +69,9 @@ jobs:
     - name: Test with pytest
       run: |
         if [[ "${{ matrix.python-version }}" == "3.6" ]]; then 
-          python3 -m pytest --cov=elastica --cov-report=xml
+          python -m pytest --cov=elastica --cov-report=xml
         else
-          python3 -m pytest
+          python -m pytest
         fi
 
     - name: Upload coverage to Codecov
@@ -81,3 +81,9 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
         verbose: true # optional (default = false)
         files: ./coverage.xml
+
+    - name: Package installation
+      run : |
+        python -m pip install --editable . --user
+        cd docs
+        python -c "import parallel_slab"
