--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
     - name: Test with pytest
       run: |
         if [[ "${{ matrix.python-version }}" == "3.6" ]]; then 
-          python -m pytest --cov=elastica --cov-report=xml
+          python -m pytest --cov=parallel_slab --cov-report=xml
         else
           python -m pytest
         fi
